fix: remove RingMenuContext

--- a/src/index.less
+++ b/src/index.less
@@ -17,9 +17,9 @@
     fill: #383c4d;
   }
 
-  &&-hover:not(&-disabled) {
+  &&-active:not(&-disabled) {
     .@{prefix}-sector {
-      fill: #307aee;
+      fill: #6eb0fc;
     }
     .@{prefix}-title {
       fill: white;
